Prefer EnumMap and EnumSet for enumeration keys and elements